# doca

./: angular.json  package-lock.json  tsconfig.json
DocaCRM.app/Contents/: Info.plist
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: \  autostart.rs  configs.rs  doca.rs  main.rs  ui.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts
src/app/env/: environment.ts
src/app/services/: background.service.ts  main.service.ts
src/app/services/API/: api.ts
src/app/services/SSE/: sse.ts
