[package]
name = "DocaCRM"
version = "0.0.0"
description = "A Tauri App"
authors = ["codedlife"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "system-tray", "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.15", features = [ "json", "stream" ] }
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.28"
sysinfo = "0.29.5"

[dev-dependencies]
futures = "0.3.25"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
